syntax = "proto3";

import "transaction_model.proto";
import "account_model.proto";

option java_multiple_files = true;
package com.trustbank.client_mobile.proto;
//option java_outer_classname = "AccountOperationsProto";

//package account_operations;

service AccountOperationService {

  rpc GetAccounts (GetAccountsRequest) returns (stream Account) {}

  rpc GetAccountInfo (GetAccountInfoRequest) returns (Account) {}

  rpc OpenNewAccount (OpenAccountRequest) returns (OperationResponse) {}

  rpc CloseAccount (CloseAccountRequest) returns (OperationResponse) {}

  rpc TransferMoney (TransferMoneyRequest) returns (Transaction) {}

  rpc DepositMoney (MoneyOperation) returns (OperationResponse) {}

  rpc WithdrawMoney (MoneyOperation) returns (OperationResponse) {}

  rpc GetHistoryOfAccount (GetHistoryOfAccountRequest) returns (TransactionHistoryPage) {}

}

message TransferMoneyRequest{
  string fromAccountId = 1;
  string toAccountId = 2;
  int64 amount = 3;
}


message GetAccountsRequest{}

message GetAccountInfoRequest{
  string accountId = 2;
}

message OperationResponse {
  bool success = 1;
}

message OpenAccountRequest{}

message CloseAccountRequest{
  string accountId = 2;
}


message GetHistoryOfAccountRequest{
  string accountId = 1;
  int32 pageNumber = 2;
  int32 pageSize = 3;
}



